@@ -1,3 +1,10 @@
+2000-07-29  Marek Michalkiewicz  <marekm@linux.org.pl>
+
+	* config/tc-avr.c: Use PARAMS macro in function declarations.
+	Don't declare md_pcrel_from_section (already in tc-avr.h).
+	(avr_operands): Use AVR_UNDEF_P and AVR_SKIP_P macros.
+	(avr_operand): Don't set (unsigned) op_mask to -1.
+
 2000-08-04  Nick Clifton  <nickc@cygnus.com>
 
 	* config/tc-sparc.c (md_begin): Fix typo in recent formatting
